import 'package:flutter/material.dart';
import 'test_page_3.dart';

class TestPage2 extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Test Page 2'),
      ),
      body: Center(
          child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          TextButton(
            onPressed: () {
              Navigator.of(context).push(
                MaterialPageRoute(
                  builder: (context) {
                    return TestPage3();
                  },
                ),
              );
            },
            child: const Text(
              '進む',
              style: TextStyle(fontSize: 30),
            ),
          ),
          TextButton(
            onPressed: () {
              Navigator.of(context).pop();
            },
            child: const Text(
              '戻る',
              style: TextStyle(fontSize: 30),
            ),
          ),
        ],
      )),
    );
  }
}
